--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -14,7 +14,7 @@
 	<div class="row">
     	<a href="/project/create" class="btn" style="margin-top:20px">新增项目</a>
 	</div>
-	<% if @projects != nil %>
+	<% if not @projects.nil? %>
 		<% @projects.each do |project| %>
 			<div class="row border-table-row">
 				<div class="span2 project-preview">
